--- a/OpenSky.Client/Pages/WorldPopulation.xaml
+++ b/OpenSky.Client/Pages/WorldPopulation.xaml
@@ -25,7 +25,7 @@
             <ui:AppBarButton Icon="Refresh" Label="Refresh" ToolTip="Refresh the view [F5]" Command="{Binding RefreshViewCommand}" />
             <ui:AppBarButton Label="Populate selected failed" ToolTip="Populate the currently selected failed airport" Command="{Binding PopulateSelectedFailedCommand}">
                 <ui:AppBarButton.Icon>
-                    <ui:FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE709;" />
+                    <ui:FontIcon Glyph="&#xE709;" />
                 </ui:AppBarButton.Icon>
             </ui:AppBarButton>
         </ui:CommandBar>
