--- a/OpenSky.Client/Pages/AircraftMarket.xaml
+++ b/OpenSky.Client/Pages/AircraftMarket.xaml
@@ -1,15 +1,15 @@
 ﻿<!-- 
 ====================================================================================================================
-<copyright file="DataImport.xaml" company="OpenSky">
+<copyright file="AircraftMarket.xaml" company="OpenSky">
   OpenSky project 2021
 </copyright>
 <summary>
-  Aircraft page
+  Aircraft market page
 </summary>
 ====================================================================================================================
 -->
 
-<controls:OpenSkyPage x:Class="OpenSky.Client.Pages.Aircraft"
+<controls:OpenSkyPage x:Class="OpenSky.Client.Pages.AircraftMarket"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -24,12 +24,14 @@
                       VerticalScrollBar="False" HorizontalScrollBar="False"
                       d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
-        <models:AircraftViewModel />
+        <models:AircraftMarketViewModel />
     </UserControl.DataContext>
     <UserControl.Resources>
         <converters:NullItemToVisibilityConverter x:Key="NullItemToVisibilityConverter" />
-        <converters:SettingsUnitConverter x:Key="SettingsUnitConverter" />
     </UserControl.Resources>
+    <UserControl.InputBindings>
+        <KeyBinding Key="F5" Command="{Binding SearchCommand}" />
+    </UserControl.InputBindings>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -155,14 +157,20 @@
                         <DataTemplate x:Key="FuelCellTemplate" DataType="openSkyApi:Aircraft">
                             <controls:AircraftFuelAsProgressbar Aircraft="{Binding .}" NumericValuesVisibility="Visible" Margin="15,0" />
                         </DataTemplate>
+                        <DataTemplate x:Key="PurchasePriceCellTemplate" DataType="openSkyApi:Aircraft">
+                            <controls:SkybucksCurrency Currency="{Binding PurchasePrice}" Margin="15,0" />
+                        </DataTemplate>
+                        <DataTemplate x:Key="RentPriceCellTemplate" DataType="openSkyApi:Aircraft">
+                            <controls:SkybucksCurrency Currency="{Binding RentPrice}" Margin="15,0" />
+                        </DataTemplate>
                     </DataGrid.Resources>
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Registry" Binding="{Binding Registry}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTextColumn Header="Location" Binding="{Binding AirportICAO}" Visibility="{Binding Source={x:Reference LocationVisibilityProxy}, Path=Visibility}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTextColumn Header="Type" Binding="{Binding Type.Name}" />
-                        <DataGridTemplateColumn Header="Fuel" CellTemplate="{StaticResource FuelCellTemplate}" />
-                        <DataGridTextColumn Header="Purchase Price" Binding="{Binding PurchasePrice, StringFormat=C0}" ElementStyle="{StaticResource DatagridCellRightAlign}" />
-                        <DataGridTextColumn Header="Rent Price" Binding="{Binding RentPrice, StringFormat=C0}" ElementStyle="{StaticResource DatagridCellRightAlign}" />
+                        <DataGridTemplateColumn Header="Fuel" CellTemplate="{StaticResource FuelCellTemplate}" SortMemberPath="Fuel" CanUserSort="True" />
+                        <DataGridTemplateColumn Header="Purchase Price" CellTemplate="{StaticResource PurchasePriceCellTemplate}" SortMemberPath="PurchasePrice" CanUserSort="True" />
+                        <DataGridTemplateColumn Header="Rental Price" CellTemplate="{StaticResource RentPriceCellTemplate}" SortMemberPath="RentPrice" CanUserSort="True" />
                         <DataGridTextColumn Header="Owner" Binding="{Binding OwnerName}" />
                     </DataGrid.Columns>
                 </DataGrid>
