--- a/OpenSky.Client/Pages/DataImport.xaml
+++ b/OpenSky.Client/Pages/DataImport.xaml
@@ -76,25 +76,40 @@
                 <ProgressBar Grid.Row="3" Grid.Column="0" MinHeight="15" Maximum="{Binding ProgressMax}" Value="{Binding ProgressValue}" Visibility="{Binding ImportStatusDetailsVisibility}" />
             </Grid>
         </GroupBox>
-        <StackPanel Grid.Column="1" Orientation="Vertical">
-            <GroupBox MinWidth="350" MaxWidth="350">
-                <GroupBox.Header>
-                    <TextBlock FontWeight="DemiBold">Little Navmap</TextBlock>
-                </GroupBox.Header>
-                <Grid Margin="5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Upload MSFS airport data</TextBlock>
-                    <Button Grid.Row="0" Grid.Column="1" Style="{StaticResource OpenSkyButtonStyle}" Margin="10,0,0,0" Command="{Binding BrowseLittleNavmapMSFSCommand}">Browse...</Button>
-                    <TextBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" MinLines="40" MaxLines="40" IsReadOnly="True" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" FontFamily="Consolas" FontSize="11" Margin="0,10,0,0" Text="{Binding LittleNavmapMSFSLogText}" Visibility="{Binding LittleNavmapMSFSLogTextVisibility}" TextChanged="TextBoxBaseOnTextChanged" />
-                </Grid>
-            </GroupBox>
-        </StackPanel>
+        <ScrollViewer Grid.Column="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible">
+            <StackPanel Orientation="Vertical">
+                <GroupBox MinWidth="350" MaxWidth="350">
+                    <GroupBox.Header>
+                        <TextBlock FontWeight="DemiBold">Little Navmap</TextBlock>
+                    </GroupBox.Header>
+                    <Grid Margin="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Upload MSFS airport data</TextBlock>
+                        <Button Grid.Row="0" Grid.Column="1" Style="{StaticResource OpenSkyButtonStyle}" Margin="10,0,0,0" Command="{Binding BrowseLittleNavmapMSFSCommand}">Browse...</Button>
+                        <TextBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" MinLines="35" MaxLines="35" IsReadOnly="True" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" FontFamily="Consolas" FontSize="11" Margin="0,10,0,0" Text="{Binding LittleNavmapMSFSLogText}" Visibility="{Binding LittleNavmapMSFSLogTextVisibility}" TextChanged="TextBoxBaseOnTextChanged" />
+                    </Grid>
+                </GroupBox>
+                <GroupBox MinWidth="350" MaxWidth="350">
+                    <GroupBox.Header>
+                        <TextBlock FontWeight="DemiBold">Client Airport Package</TextBlock>
+                    </GroupBox.Header>
+                    <Grid Margin="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" TextWrapping="Wrap">Remember to generate a new client airport package after completing any imports modifying airport data!</TextBlock>
+                        <Button Grid.Column="1" Style="{StaticResource OpenSkyButtonStyle}" Margin="10,0,0,0" Command="{Binding GenerateClientAirportPackageCommand}">Generate</Button>
+                    </Grid>
+                </GroupBox>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </controls:OpenSkyPage>
