--- a/OpenSky.Client/Pages/FlightPlan.xaml
+++ b/OpenSky.Client/Pages/FlightPlan.xaml
@@ -16,13 +16,27 @@
                           xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                           xmlns:controls="clr-namespace:OpenSky.Client.Controls"
                           xmlns:models="clr-namespace:OpenSky.Client.Pages.Models"
+                          xmlns:ui="http://schemas.modernwpf.com/2019"
+                          xmlns:converters="clr-namespace:OpenSky.Client.Converters"
                           LoadingText="{Binding LoadingText}"
                           mc:Ignorable="d" 
-                          d:DesignHeight="450" d:DesignWidth="800">
+                          d:DesignHeight="900" d:DesignWidth="800">
     <UserControl.DataContext>
         <models:FlightPlanViewModel />
     </UserControl.DataContext>
+    <UserControl.Resources>
+        <converters:NullItemToEnabledConverter x:Key="NullItemToEnabledConverter" />
+        <converters:NullItemToVisibilityConverter x:Key="NullItemToVisibilityConverter" />
+        <converters:SettingsUnitConverter x:Key="SettingsUnitConverter" />
+    </UserControl.Resources>
     <StackPanel Orientation="Vertical">
+        <ui:CommandBar HorizontalContentAlignment="Left">
+            <ui:CommandBar.PrimaryCommands>
+                <ui:AppBarButton Icon="Refresh" Label="Refresh" ToolTip="Refresh flight plans [F5]" Command="{Binding RefreshAircraftCommand}" />
+                <ui:AppBarButton Icon="Save" Label="Save" ToolTip="Save flight plan [Ctrl+S]" Command="{Binding SaveCommand}" />
+                <ui:AppBarButton Icon="Delete" Label="Delete" ToolTip="Delete the flight plan"  />
+            </ui:CommandBar.PrimaryCommands>
+        </ui:CommandBar>
         <GroupBox>
             <GroupBox.Header>
                 <TextBlock FontSize="15" FontWeight="DemiBold">Flight Basics</TextBlock>
@@ -37,27 +51,30 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0">Airline?</TextBlock>
-                <TextBlock Grid.Row="0" Grid.Column="1">Flight#</TextBlock>
-                <TextBlock Grid.Row="0" Grid.Column="2">Origin</TextBlock>
-                <TextBlock Grid.Row="0" Grid.Column="3">Destination</TextBlock>
-                <TextBlock Grid.Row="0" Grid.Column="4">Alternate</TextBlock>
-                <TextBlock Grid.Row="0" Grid.Column="5">Date</TextBlock>
-                <TextBlock Grid.Row="0" Grid.Column="6" Grid.ColumnSpan="2">Time (Utc)</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" HorizontalAlignment="Center">Airline?</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="1" Margin="5" HorizontalAlignment="Center">Flight#</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="2" Margin="5" HorizontalAlignment="Center">Origin</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="3" Margin="5" HorizontalAlignment="Center">Destination</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="4" Margin="5" HorizontalAlignment="Center">Alternate</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="5" Margin="5" HorizontalAlignment="Center">Date</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="6" Grid.ColumnSpan="2" Margin="5" HorizontalAlignment="Center">Time (Utc)</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="8" Margin="5" HorizontalAlignment="Center">Utc Offset</TextBlock>
 
-                <CheckBox Grid.Row="1" Grid.Column="0" IsChecked="{Binding IsAirlineFlight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding FlightNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <TextBox Grid.Row="1" Grid.Column="2" FontFamily="Consolas" Text="{Binding OriginICAO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <TextBox Grid.Row="1" Grid.Column="3" FontFamily="Consolas" Text="{Binding DestinationICAO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <TextBox Grid.Row="1" Grid.Column="4" FontFamily="Consolas" Text="{Binding AlternateICAO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <DatePicker Grid.Row="1" Grid.Column="5" SelectedDate="{Binding PlannedDepartureTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <TextBox Grid.Row="1" Grid.Column="6" Text="{Binding DepartureHour, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <TextBox Grid.Row="1" Grid.Column="7" Text="{Binding DepartureMinute, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <CheckBox Grid.Row="1" Grid.Column="0" IsChecked="{Binding IsAirlineFlight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MinWidth="20" HorizontalAlignment="Center" />
+                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding FlightNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" Width="90" />
+                <TextBox Grid.Row="1" Grid.Column="2" FontFamily="Consolas" Text="{Binding OriginICAO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" Width="90" CharacterCasing="Upper" />
+                <TextBox Grid.Row="1" Grid.Column="3" FontFamily="Consolas" Text="{Binding DestinationICAO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" Width="90" CharacterCasing="Upper" />
+                <TextBox Grid.Row="1" Grid.Column="4" FontFamily="Consolas" Text="{Binding AlternateICAO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" Width="90" CharacterCasing="Upper" />
+                <DatePicker Grid.Row="1" Grid.Column="5" SelectedDate="{Binding PlannedDepartureTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5,0" />
+                <TextBox Grid.Row="1" Grid.Column="6" Text="{Binding DepartureHour, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=00}" Margin="5,0,0,0" />
+                <TextBox Grid.Row="1" Grid.Column="7" Text="{Binding DepartureMinute, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=00}" Margin="0,0,5,0" />
+                <ComboBox Grid.Row="1" Grid.Column="8" ItemsSource="{Binding UtcOffsets}" SelectedValue="{Binding UtcOffset, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
         </GroupBox>
         <GroupBox>
@@ -66,23 +83,95 @@
             </GroupBox.Header>
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0" Grid.Column="0">Aircraft</TextBlock>
-                <TextBlock Grid.Row="0" Grid.Column="1">Fuel</TextBlock>
-                <TextBlock Grid.Row="0" Grid.Column="2">Payload</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="0" Margin="5">Aircraft</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="1" Margin="5">Fuel</TextBlock>
+                <TextBlock Grid.Row="0" Grid.Column="2" Margin="5">Payload</TextBlock>
 
-                <ComboBox Grid.Row="1" Grid.Column="0" ItemsSource="{Binding Aircraft}" SelectedItem="{Binding SelectedAircraft, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                
-                <TextBlock Grid.Row="1" Grid.Column="2">TODO</TextBlock>
+                <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical">
+                    <Grid>
+                        <ComboBox Name="AircraftCombo" ItemsSource="{Binding Aircraft}" SelectedItem="{Binding SelectedAircraft, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" Margin="5,0" />
+                        <Button Style="{StaticResource DeleteButtonStyle}" MinWidth="34" VerticalAlignment="Stretch" HorizontalAlignment="Right" Margin="0,2,30,2" Padding="0" Visibility="{Binding SelectedItem, ElementName=AircraftCombo, Converter={StaticResource NullItemToVisibilityConverter}}" Command="{Binding ClearAircraftCommand}" />
+                    </Grid>
+                    <Grid Margin="5" IsEnabled="{Binding SelectedAircraft, Converter={StaticResource NullItemToEnabledConverter}}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Column="0" Grid.Row="0">Empty weight</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="1">Payload</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="2">ZFW</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="3"></TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="4">Fuel</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="5">Gross</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="6">MAX Gross</TextBlock>
+
+                        <TextBlock Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" Text="{Binding SelectedAircraft.Type.EmptyWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|N1|true}" />
+                        <TextBlock Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" Text="{Binding PayloadWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|N1|true}" />
+                        <TextBlock Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Text="{Binding ZeroFuelWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|N1|true}" />
+
+                        <TextBlock Grid.Column="1" Grid.Row="4" HorizontalAlignment="Right" Text="{Binding FuelWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|N1|true}" />
+                        <TextBlock Grid.Column="1" Grid.Row="5" HorizontalAlignment="Right" Text="{Binding GrossWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|N1|true}" />
+                        <TextBlock Grid.Column="1" Grid.Row="6" HorizontalAlignment="Right" Text="{Binding SelectedAircraft.Type.MaxGrossWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|N1|true}" />
+
+                    </Grid>
+                </StackPanel>
+
+                <Grid Grid.Row="1" Grid.Column="1" IsEnabled="{Binding SelectedAircraft, Converter={StaticResource NullItemToEnabledConverter}}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5,0">
+                        <TextBlock VerticalAlignment="Center">Load</TextBlock>
+                        <TextBox Margin="5,0" Text="{Binding FuelGallons, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=fuel|N1|false}" />
+                        <TextBlock VerticalAlignment="Center" Margin="0,0,5,0">, maximum is </TextBlock>
+                        <TextBlock VerticalAlignment="Center" Text="{Binding SelectedAircraft.Type.FuelTotalCapacity, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=fuel|N1|true}" />
+                    </StackPanel>
+                    <Slider Grid.Row="1" TickFrequency="0.5" IsSnapToTickEnabled="True" HorizontalAlignment="Stretch" Margin="5,0" Value="{Binding FuelGallons, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Maximum="{Binding SelectedAircraft.Type.FuelTotalCapacity, Mode=OneWay}" />
+                </Grid>
+
+                <TextBlock Grid.Row="1" Grid.Column="2" Margin="5,0">TODO</TextBlock>
             </Grid>
+        </GroupBox>
+        <GroupBox>
+            <GroupBox.Header>
+                <TextBlock FontSize="15" FontWeight="DemiBold">Crew</TextBlock>
+            </GroupBox.Header>
+            <StackPanel Orientation="Vertical" Margin="5">
+                <TextBlock Margin="0,0,0,20">TODO</TextBlock>
+                <TextBlock>Dispatcher Remarks:</TextBlock>
+                <TextBox MinLines="5" AcceptsReturn="True" Text="{Binding DispatcherRemarks, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ui:ControlHelper.PlaceholderText="Dispatcher remarks, one per line" ui:ControlHelper.PlaceholderForeground="#666" />
+            </StackPanel>
+        </GroupBox>
+        <GroupBox>
+            <GroupBox.Header>
+                <TextBlock FontSize="15" FontWeight="DemiBold">Route</TextBlock>
+            </GroupBox.Header>
+            <TextBlock>TODO</TextBlock>
+        </GroupBox>
+        <GroupBox>
+            <GroupBox.Header>
+                <TextBlock FontSize="15" FontWeight="DemiBold">Map</TextBlock>
+            </GroupBox.Header>
+            <TextBlock>TODO</TextBlock>
         </GroupBox>
     </StackPanel>
 </controls:OpenSkyPage>
